# gametest

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: BasicGLTFShader.h  Camera.cpp  Camera.h  Matrix.cpp  Matrix.h  ModelLoader.cpp  ModelLoader.h  Shader.cpp  Shader.h  Skinning.cpp  Skinning.h  Trackball.cpp  Transform.cpp  Transform.h  main.cpp
